--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="row py-5 px-5" id="show-info">
-                <div class="upcoming col-12 col-lg-4"><img src="/img/a-raisin-in-the-sun-theater-1 (1).png" alt="" class="img-fluid float-start"></div>
+                <div class="upcoming col-12 col-lg-4"><img src="img/a-raisin-in-the-sun-theater-1 (1).png" alt="" class="img-fluid float-start"></div>
                 <div class="upcoming col-12 col-lg-5">
                     <div class="row">
                         <p class="text-start text-wrap fs-2">A Raisin in the Sun</p>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="row py-5 px-5" id="show-info">
-                <div class="upcoming col-12 col-lg-4"><img src="/img/a-raisin-in-the-sun-theater-1 (1).png" alt="" class="img-fluid float-start"></div>
+                <div class="upcoming col-12 col-lg-4"><img src="img/a-raisin-in-the-sun-theater-1 (1).png" alt="" class="img-fluid float-start"></div>
                 <div class="upcoming col-12 col-lg-5">
                     <div class="row">
                         <p class="text-start text-wrap fs-2">A Raisin in the Sun</p>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="row py-5 px-5" id="show-info">
-                <div class="upcoming col-12 col-lg-4"><img src="/img/a-raisin-in-the-sun-theater-1 (1).png" alt="" class="img-fluid float-start"></div>
+                <div class="upcoming col-12 col-lg-4"><img src="img/a-raisin-in-the-sun-theater-1 (1).png" alt="" class="img-fluid float-start"></div>
                 <div class="upcoming col-12 col-lg-5">
                     <div class="row">
                         <p class="text-start text-wrap fs-2">A Raisin in the Sun</p>
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div class="row py-5 px-5" id="show-info">
-                <div class="upcoming col-12 col-lg-4"><img src="/img/a-raisin-in-the-sun-theater-1 (1).png" alt="" class="img-fluid float-start"></div>
+                <div class="upcoming col-12 col-lg-4"><img src="img/a-raisin-in-the-sun-theater-1 (1).png" alt="" class="img-fluid float-start"></div>
                 <div class="upcoming col-12 col-lg-5">
                     <div class="row">
                         <p class="text-start text-wrap fs-2">A Raisin in the Sun</p>
@@ -141,7 +141,7 @@
             <div class="p-5">
                 <div class="row">
                     <div class="col-12 col-lg-3" id="map">
-                        <img class="p-2 mt-5" src="/img/Chicago.PNG" alt="">
+                        <img class="p-2 mt-5" src="img/Chicago.PNG" alt="">
                     </div>
                     <div class="col-12 col-lg-3 ps-5 pt-5 text-start" id="info">
                         <h2>Info</h2>
