moved spacing to bootstrap framework

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </nav>
         <div class="row" id="showcase">
-            <div class="col-8 offset-2">
+            <div class="col-8 offset-2 align-self-center">
                 <p class="text-center textwrap">Featured Shows</p>
             </div>
         </div>
@@ -72,7 +72,7 @@
                         <p class="text-start text-wrap fs-6">$75</p>
                     </div>
                 </div>
-                <div class="upcoming col-12 col-lg-3 pe-0">
+                <div class="upcoming col-12 col-lg-3 pe-0 align-self-center">
                         <button type="button">Read More</button>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                         <p class="text-start text-wrap fs-6">$75</p>
                     </div>
                 </div>
-                <div class="upcoming col-12 col-lg-3 pe-0">
+                <div class="upcoming col-12 col-lg-3 pe-0 align-self-center">
                         <button type="button">Read More</button>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                         <p class="text-start text-wrap fs-6">$75</p>
                     </div>
                 </div>
-                <div class="upcoming col-12 col-lg-3 pe-0">
+                <div class="upcoming col-12 col-lg-3 pe-0 align-self-center">
                         <button type="button">Read More</button>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                         <p class="text-start text-wrap fs-6">$75</p>
                     </div>
                 </div>
-                <div class="upcoming col-12 col-lg-3 pe-0">
+                <div class="upcoming col-12 col-lg-3 pe-0 align-self-center">
                         <button type="button">Read More</button>
                 </div>
             </div>
